fixed an issue where the icons in the hobbies section didn't appear with the same size on mobile. Added padding to the links and stack labels in the project's overview

--- a/template/src/index.css
+++ b/template/src/index.css
@@ -11,12 +11,6 @@ h6 {
   font-family: 'M PLUS Rounded 1c';
 }
 
-*,
-body,
-html {
-  font-size: large;
-}
-
 html {
   overflow-y: scroll;
 }
